Fix nav items collapsing into hamburger menu
Prevent flexbox from shrinking .masthead__title/.masthead__menu
below their content width, which was causing the greedy-nav script
to misjudge available space and hide nav links behind the toggle
button. Switch visible-links to flex display for more predictable
width measurement.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -26,6 +26,7 @@ strong {
 
 .masthead__title {
   padding: 0;
+  flex-shrink: 0;
 }
 
 .masthead__title a {
@@ -50,4 +51,17 @@ strong {
 
 .masthead__menu {
   width: auto;
+  flex-shrink: 0;
+}
+
+.greedy-nav {
+  min-width: 0;
+}
+
+.greedy-nav .visible-links {
+  display: flex;
+}
+
+.greedy-nav .visible-links li {
+  display: block;
 }
